[gd_scene load_steps=6 format=1]

[ext_resource path="res://Codigo/escolha.gd" type="Script" id=1]
[ext_resource path="res://img/tela_2.png" type="Texture" id=2]
[ext_resource path="res://img/boca.png" type="Texture" id=3]
[ext_resource path="res://img/pancreas.png" type="Texture" id=4]
[ext_resource path="res://img/figado.png" type="Texture" id=5]

[node name="EventPlayer" type="EventPlayer"]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/pitch_scale = 1.0
stream/tempo_scale = 1.0
stream/autoplay = false
stream/paused = false
script/script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="TextureFrame" type="TextureFrame" parent="ParallaxBackground/ParallaxLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="boca" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 532.0
margin/top = 150.0
margin/right = 877.0
margin/bottom = 224.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="pancreas" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 520.0
margin/top = 268.0
margin/right = 865.0
margin/bottom = 342.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="figado" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 516.0
margin/top = 388.0
margin/right = 861.0
margin/bottom = 462.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="boca" to="." method="_on_boca_pressed"]

[connection signal="pressed" from="pancreas" to="." method="_on_pancreas_pressed"]

[connection signal="pressed" from="figado" to="." method="_on_figado_pressed"]


